<resources>
    <string name="app_name">PollyCodeChallenge</string>
    <string name="home">Home</string>
    <string name="no_tweets">No Tweets</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="retweet">retweet</string>
    <string name="like">like</string>
    <string name="comments">comments</string>
    <string name="space">•</string>
</resources>
