<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="1dp"
    android:layout_marginBottom="1dp"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/picture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/partylogo"
            app:civ_border_color="#999999"
            app:civ_border_width="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp" />

        <TextView
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/textview"
            app:layout_constraintLeft_toRightOf="@+id/picture"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="24dp" />

        <ImageView
            android:id="@+id/check"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/name"
            app:layout_constraintLeft_toRightOf="@+id/name"
            app:layout_constraintTop_toTopOf="@+id/name"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_veriified"
            android:layout_marginStart="4dp"
            android:contentDescription=""
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/screenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/textview1"
            app:layout_constraintLeft_toRightOf="@+id/check"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/space"
            app:layout_constraintLeft_toRightOf="@+id/screenName"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="6dp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/textview2"
            app:layout_constraintLeft_toRightOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp" />

        <ImageView
            android:id="@+id/expand"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow"
            android:layout_marginEnd="8dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/description"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="7dp"
            android:text="@string/textview3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/name"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="6dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:srcCompat="@drawable/googleg_standard_color_18"
            app:layout_constraintLeft_toLeftOf="@+id/description"
            android:layout_marginEnd="8dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:drawablePadding="10dp"
            android:id="@+id/retweet"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_retweet"
            android:text="@string/retweet"
            android:textAlignment="textEnd"
            app:layout_constraintLeft_toRightOf="@+id/comments"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintRight_toLeftOf="@+id/likes"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/likes"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_like"
            android:text="@string/like"
            android:textAlignment="textEnd"
            app:layout_constraintLeft_toRightOf="@+id/retweet"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintRight_toLeftOf="@+id/message"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:drawablePadding="10dp"
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_comment"
            android:text="@string/comments"
            android:textAlignment="textEnd"
            app:layout_constraintLeft_toLeftOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="0dp"
            tools:ignore="RtlHardcoded" />

        <ImageButton
            android:scaleType="fitXY"
            android:id="@+id/message"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            app:layout_constraintLeft_toRightOf="@+id/likes"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:srcCompat="@drawable/ic_message"
            tools:ignore="ContentDescription" />


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>